# CoffeeBean

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
base/models/box/: box.mtl
base/scenes/: scene01.json  scene02.json  scene03.json
basegame/fonts/: FontCodeMonospace.txt  charmap.aseprite
basegame/models/: box.m3d  map.m3d
basegame/src/: game.odin
basegame/textures/: door.tga  ladder.tga  mat_dirt.tga  mat_grass.tga  mat_marble.tga  mat_sky.tga  mat_stone.tga  mat_water.tga  mat_wood.tga
engine/: app.odin  coffeebean.odin
engine/shaders/: default_fragment.glsl  default_screen_fragment.glsl  default_screen_vertex.glsl  default_text_fragment.glsl  default_text_vertex.glsl  default_vertex.glsl  postproc_grayscale.glsl
engine/src/: App.cpp  App.h  config.h  main.cpp
engine/src/Entities/: Components.cpp  Components.h  Entity.cpp  Entity.h
engine/src/Importers/: ObjImporter.cpp  ObjImporter.hpp
engine/src/Input/: Input.cpp  Input.h
engine/src/Renderer/: Buffers.cpp  Buffers.h  Camera.cpp  Camera.h  DefaultShaders.h  Material.cpp  Material.hpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
libs/mdf/: mdf.odin
libs/mdf/m3d/: m3d.odin
libs/qmap/: qmap.odin
map_compiler/: percolator.odin
shared/: shared.odin
